Changing grac function key
Change-Id: I4698cfdad04f5c6d80a5a58f6fb756ee9ded4c7d

--- a/usr/lib/grac-editor/ko.po
+++ b/usr/lib/grac-editor/ko.po
@@ -151,7 +151,7 @@ msgstr "_종료(Q)"
 
 #: grac_editor.py:588
 msgid "_Help"
-msgstr "_도움말(H)"
+msgstr "_도움말(F1)"
 
 #: grac_editor.py:589
 msgid "_Remove User Rule(U)"
